--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
                 <tbody>
                 <tr th:each="rule : ${rules}">
                     <td th:text="${rule.id}"></td>
-                    <td th:text="${rule.title}"></td>
+                    <td th:text="${rule.ruleOverviewDTO.title}"></td>
                     <td th:text="${rule.description}"></td>
                 </tr>
                 </tbody>
