--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <body>
 <div class="content" style="content: ''; display: table; clear: both; width: 100%; height: 100%">
     <div class="rule-list-container" style="float: left; width: 50%; height: 100%; background-color: #0057b7">
@@ -23,7 +23,7 @@
         <div style="padding: 2em">
             <form method="post">
                 <table>
-                    <input name="id" type="hidden" th:value='${selectedRule != null ? selectedRule.id() : ""}'>
+                    <input hidden="hidden" name="id" th:value='${selectedRule != null ? selectedRule.id() : ""}'>
                     <tr>
                         <td>Title</td>
                         <td><input name="title" type="text"
@@ -40,7 +40,7 @@
                         <td>Author</td>
                         <td>
                             <select name="user" th:switch="${users}">
-                                <option hidden="hidden" th:selected='${selectedRule == null || selectedRule.creator() == null ? "selected" : "false"}' value=""></option>
+                                <option th:selected='${selectedRule == null || selectedRule.creator() == null ? "selected" : "false"}' value=""></option>
                                 <option
                                         th:each="user : ${users}"
                                         th:value="${user.id()}"
@@ -48,6 +48,18 @@
                                         th:text='${user.name + " (" + user.id + ")"}'>
                                 </option>
                             </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Languages</td>
+                        <td><input name="languages" type="text"
+                                   th:value='${selectedRule != null ? #strings.listJoin(selectedRule.ruleOverviewDTO().languages(), ",") : ""}'>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Tags</td>
+                        <td><input name="tags" type="text"
+                                   th:value='${selectedRule != null ?  #strings.listJoin(selectedRule.ruleOverviewDTO().tags(), ",") : ""}'>
                         </td>
                     </tr>
                 </table>
