Fixed init-mongo.js to correctly link Authors to existing Users in the Rule; changed cursor on buttons

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -78,7 +78,7 @@
                             <td>Author</td>
                             <td>
                                 <select name="user" th:switch="${users}">
-                                    <option hidden="hidden" th:selected='${selectedRule == null || selectedRule.creator() == null ? "selected" : "false"}' value=""></option>
+                                    <option th:selected='${selectedRule == null || selectedRule.creator() == null ? "selected" : "false"}' value=""></option>
                                     <option
                                             th:each="user : ${users}"
                                             th:value="${user.id()}"
